Rework NumberArrayFactory
The new implementation is backed by ByteBuffers for all allocations.
Instead of using our page cache to write back to the file when memory pressure gets too high, we utilize mmap.
This means that all arrays now support proper CAS and atomic operations

The specific type implementations are also simpler by using VarHandles to operate on the data.
So the same LongArrayImpl works for all different allocation strategies, including swapping to file.